--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="CSS/styles.css" rel="stylesheet"type="text/css"
     <meta charset="utf-8">
     <title>TRIANGLE TRACKER</title>
   </head>
-  <body>
-    <script src="js/scripts.js"></script>
+      <body>
+    <h1>TRIANGLE TRACKER</h1>
+    <div class="image">
+      <img src="images/cly.png" alt="The image of cly">
+    </div>
+    <h2>Types of triangles</h2>
+    <ol>
+      <li>Equilateral triangle</li>
+      <li>Isosceles triangle</li>
+      <li>Scalene triangle</li>
+      <li>Obtuse triangle</li>
+      <li>Acute triangle</li>
+      <li> Right angled triangle</li>
+    </ol>
+      <div class="triangle"</div>
+  <p>Properties of equilateral triangle</p>
+      <ul>
+        <li> All sides are equal</li>
+        <li> All angles are equal</li>
+      </ul>
+  <p>Properties of isosceles triangle</p>
+      <ul>
+        <li> Two angles are equal</li>
+        <li> Two sides are equal</li>
+      </ul>
+  <p>Properties of acute angles</p>
+      <ul>
+        <li> All angles are less than 90'</li>
+      </ul>
+  <p>Properties of an obtuse angle</p>
+      <ul>
+        <li>One angle greater than 90'</li>
+      </ul>
+  <p>Properties of a right angled triangle</p>
+      <ul>
+        <li> One angle equal to 90'</li>
+      </ul>
+
+
+
   </body>
 </html>
