final changes to the project. Ready to push to repo and create live website

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <link href="CSS/styles.css" rel="stylesheet"type="text/css"
     <meta charset="utf-8">
     <title>TRIANGLE TRACKER</title>
+
   </head>
       <body>
     <h1>TRIANGLE TRACKER</h1>
     <div class="image">
       <img src="images/cly.png" alt="The image of cly">
     </div>
+
     <h2>Types of triangles</h2>
     <ol>
       <li>Equilateral triangle</li>
@@ -21,11 +23,17 @@
     </ol>
       <div class="triangle"</div>
   <p>Properties of equilateral triangle</p>
+  <div class="image">
+    <img src="CSS/clly.png">
+  </div>
       <ul>
         <li> All sides are equal</li>
         <li> All angles are equal</li>
       </ul>
-  <p>Properties of isosceles triangle</p>
+      <p>Properties of isosceles triangle</p>
+      <div class="image">
+        <img src="CSS/Iso.png">
+      </div>
       <ul>
         <li> Two angles are equal</li>
         <li> Two sides are equal</li>
@@ -39,11 +47,16 @@
         <li>One angle greater than 90'</li>
       </ul>
   <p>Properties of a right angled triangle</p>
+  <div class="image">
+    <img src="CSS/real.png">
+  </div>
       <ul>
         <li> One angle equal to 90'</li>
       </ul>
 
-
+      <div class="test-box">
+      <p>TRIANGLE IS EASY TO UNDERSTAND!!!!!</p>
+    </div>
 
   </body>
 </html>
