minor edits to the scripts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
       <body>
     <h1>TRIANGLE TRACKER</h1>
+
+    <script src="JS/scripts.js"></script>
+
     <div class="image">
       <img src="images/cly.png" alt="The image of cly">
     </div>
