--- a/index.html
+++ b/index.html
@@ -1,65 +1,133 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link href="CSS/styles.css" rel="stylesheet"type="text/css"
-    <meta charset="utf-8">
-    <title>TRIANGLE TRACKER</title>
 
-  </head>
-      <body>
-    <h1>TRIANGLE TRACKER</h1>
+<head>
+  <link href="CSS/styles.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <title>TRIANGLE TRACKER</title>
+</head>
 
-    <script src="JS/scripts.js"></script>
+<body>
+  <h1>TRIANGLE TRACKER</h1>
 
-    <div class="image">
-      <img src="images/cly.png" alt="The image of cly">
+  <script src="JS/scripts.js"></script>
+
+  <div class="image">
+    <img src="images/cly.png" alt="The image of cly">
+  </div>
+  <!-- Slider Beginning -->
+  <style>
+    .mySlides {
+      display: none;
+    }
+  </style>
+
+  <div class="w3-container">
+    <h2>Slideshow Caption</h2>
+    <p>Add a caption text for each image slide with the w3-display-* classes (topleft, topmiddle, topright, bottomleft, bottommiddle, bottomright or middle).</p>
+
+  </div>
+
+
+  <div class="w3-content w3-display-container">
+
+    <div class="w3-display-container mySlides">
+      <img src="images/cly.png" style="width:30%">
+      <div class="w3-display-bottomright w3-medium w3-container w3-padding-16 w3-black">
+        Equilateral
+      </div>
     </div>
 
-    <h2>Types of triangles</h2>
-    <ol>
-      <li>Equilateral triangle</li>
-      <li>Isosceles triangle</li>
-      <li>Scalene triangle</li>
-      <li>Obtuse triangle</li>
-      <li>Acute triangle</li>
-      <li> Right angled triangle</li>
-    </ol>
-      <div class="triangle"</div>
-  <p>Properties of equilateral triangle</p>
-  <div class="image">
-    <img src="CSS/clly.png">
-  </div>
-      <ul>
-        <li> All sides are equal</li>
-        <li> All angles are equal</li>
-      </ul>
-      <p>Properties of isosceles triangle</p>
-      <div class="image">
-        <img src="CSS/Iso.png">
+    <div class="w3-display-container mySlides">
+      <img src="images/Iso.png" style="width:30%">
+      <div class="w3-display-bottomright w3-medium w3-container w3-padding-16 w3-black">
+        Isosceles
       </div>
-      <ul>
-        <li> Two angles are equal</li>
-        <li> Two sides are equal</li>
-      </ul>
-  <p>Properties of acute angles</p>
-      <ul>
-        <li> All angles are less than 90'</li>
-      </ul>
-  <p>Properties of an obtuse angle</p>
-      <ul>
-        <li>One angle greater than 90'</li>
-      </ul>
-  <p>Properties of a right angled triangle</p>
-  <div class="image">
-    <img src="CSS/real.png">
-  </div>
-      <ul>
-        <li> One angle equal to 90'</li>
-      </ul>
+    </div>
 
-      <div class="test-box">
+    <div class="w3-display-container mySlides">
+      <img src="images/real.png" style="width:30%">
+      <div class="w3-display-bottomright w3-medium w3-container w3-padding-16 w3-black">
+        Scalene
+      </div>
+    </div>
+  </div>
+
+  <button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+
+  </div>
+
+  <script>
+    var slideIndex = 1;
+    showDivs(slideIndex);
+
+    function plusDivs(n) {
+      showDivs(slideIndex += n);
+    }
+
+    function showDivs(n) {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      if (n > x.length) {
+        slideIndex = 1
+      }
+      if (n < 1) {
+        slideIndex = x.length
+      }
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      x[slideIndex - 1].style.display = "block";
+    }
+  </script>
+  <!-- Slider Ending -->
+  <h2>Types of triangles</h2>
+  <ol>
+    <li>Equilateral triangle</li>
+    <li>Isosceles triangle</li>
+    <li>Scalene triangle</li>
+    <li>Obtuse triangle</li>
+    <li>Acute triangle</li>
+    <li> Right angled triangle</li>
+  </ol>
+  <div class="triangle" </div>
+    <p>Properties of equilateral triangle</p>
+    <div class="image">
+      <img src="images/cly.png">
+    </div>
+    <ul>
+      <li> All sides are equal</li>
+      <li> All angles are equal</li>
+    </ul>
+    <p>Properties of isosceles triangle</p>
+    <div class="image">
+      <img src="images/Iso.png">
+    </div>
+    <ul>
+      <li>Two angles are equal</li>
+      <li>Two sides are equal</li>
+    </ul>
+    <p>Properties of acute angles</p>
+    <ul>
+      <li>All angles are less than 90'</li>
+    </ul>
+    <p>Properties of an obtuse angle</p>
+    <ul>
+      <li>One angle greater than 90'</li>
+    </ul>
+    <p>Properties of a right angled triangle</p>
+    <div class="image">
+      <img src="images/real.png">
+    </div>
+    <ul>
+      <li> One angle equal to 90'</li>
+    </ul>
+
+    <div class="test-box">
       <p>TRIANGLE IS EASY TO UNDERSTAND!!!!!</p>
     </div>
 
-  </body>
+</body>
+
 </html>
